--- a/app/src/main/res/layout/video_row.xml
+++ b/app/src/main/res/layout/video_row.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <nz.co.delacour.exposurevideoplayer.ExposureVideoPlayer
-        android:id="@+id/evp"
+    <com.google.android.youtube.player.YouTubeThumbnailView
+        android:id="@+id/youtube_thumbnail"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="15dp"/>
-</LinearLayout>
+        android:layout_height="200dp"/>
+
+</android.support.v7.widget.CardView>
