--- a/app/src/main/res/layout/video_row.xml
+++ b/app/src/main/res/layout/video_row.xml
@@ -1,11 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp">
 
-    <com.google.android.youtube.player.YouTubeThumbnailView
-        android:id="@+id/youtube_thumbnail"
+    <RelativeLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="match_parent">
+
+        <com.google.android.youtube.player.YouTubeThumbnailView
+            android:id="@+id/youtube_thumbnail"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:padding="0dp"
+            android:layout_margin="0dp"/>
+
+        <com.brunogcpinheiro.igrejadaunidade.helper.MyTextView
+            android:id="@+id/video_text"
+            android:text="Descrição do vídeo"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="7dp"
+            android:paddingBottom="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_below="@id/youtube_thumbnail"/>
+
+        <com.brunogcpinheiro.igrejadaunidade.helper.MyTextView
+            android:id="@+id/video_date"
+            android:text="Data"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            android:layout_marginTop="7dp"
+            android:paddingBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_below="@id/video_text"/>
+
+    </RelativeLayout>
+
+
 
 </android.support.v7.widget.CardView>
