--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="colorPrimary">#3498db</color>
     <color name="colorPrimaryDark">#414141</color>
     <color name="menuItemInfo">#2ecc71</color>
-    <color name="menuItemCelula">#f1c40f</color>
-    <color name="menuItemOracao">#c0392b</color>
+    <color name="menuItemCelula">#d981c3</color>
+    <color name="menuItemOracao">#ffeb3b</color>
     <color name="menuItemOferta">#2c3e50</color>
     <color name="divider">#cccccc</color>
     <color name="colorAccent">#ffeb3b</color>
