--- a/app/src/main/res/layout/oracao_row.xml
+++ b/app/src/main/res/layout/oracao_row.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_margin="10dp">
 
     <RelativeLayout
+        android:id="@+id/item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp">
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp">
+
 
         <com.brunogcpinheiro.igrejadaunidade.helper.MyTextView
             android:id="@+id/oracaoAutor"
@@ -52,10 +56,27 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@id/textoOracao"
-            android:layout_marginTop="5dp"
-            android:background="@color/divider" />
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="#55a3a3a3" />
+
+        <Button
+            android:id="@+id/deletar"
+            android:text="Deletar este pedido"
+            android:textAllCaps="true"
+            android:background="#55fa0000"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_below="@id/dividerMenu" />
 
     </RelativeLayout>
 
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
